<resources>
    <string name="app_name">Trainer</string>
    <string name="title_activity_run">RunActivity</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_line_show">LineShowActivity</string>
    <string name="lineShow">体重变化</string>
    <string name="me">我</string>
    <string name="course">课程</string>
    <string name="less_20">&lt;20</string>
    <string name="more_40">&gt;40</string>
    <string name="more_0.63">&gt;0.63</string>
    <string name="less_0.43">&lt;0.43</string>
    <string name="less_11">&lt;11%</string>
    <string name="more_28">&gt;28%</string>
    <string name="age">年龄</string>
    <string name="height">身高</string>
    <string name="weight">体重</string>
    <string name="waist">腰围</string>
    <string name="tips1">（在肚脐处测量）</string>
    <string name="tips2">(最窄处)</string>
    <string name="neck">颈围</string>
    <string name="sex">性别</string>
    <string name="cm">CM</string>
    <string name="kg">KG</string>
    <string name="bfr">体脂率</string>
    <string name="sport">运动程度</string>
    <string name="high">高</string>
    <string name="middle">中</string>
    <string name="low">低</string>
    <string name="takePhoto">相机</string>
    <string name="gallery">相册</string>
    <string name="cancel">取消</string>
    <string name="sure">确定</string>
    <string name="change_id">修改昵称</string>
    <string name="trainer_id">Trainer号:</string>
    <string name="nicheng">昵称</string>
    <string name="change_account">切换账号</string>
    <string name="logout">退出登录</string>
    <string name="sport_low">少量运动（每周1&#045;3天轻量运动）</string>
    <string name="sport_middle">中等运动（每周3&#045;5天中等程度运动）</string>
    <string name="sport_high">高运动量（每周6&#045;7天高强度运动）</string>


</resources>
