<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#333D56"
    android:orientation="vertical"
    tools:context=".Me_Activty.UserMsgActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#2D374C"
        android:orientation="horizontal">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/Me_textColor"
            android:padding="15dp"
            android:text="个人信息"
            android:layout_gravity="center_horizontal"
            android:textSize="25sp"
            android:gravity="center" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/age"
            android:gravity="center"
            android:textSize="20sp"
            android:padding="10dp"
            android:textColor="@color/Me_textColor"/>
        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_bg"
            android:gravity="center"
            android:id="@+id/age"
            android:digits="1234567890"
            android:inputType="number|phone"
            android:singleLine="true"
            android:maxLength="6"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:layout_weight="1"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="1">

        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="10dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/height"
            android:gravity="center"
            android:textSize="20sp"
            android:padding="10dp"
            android:textColor="@color/Me_textColor"/>
        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_bg"
            android:gravity="center"
            android:id="@+id/height"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:layout_weight="1"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cm"
            android:textSize="20sp"
            android:gravity="center"
            android:textColor="@color/Me_textColor"
            android:background="#00000000"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="10dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/weight"
            android:gravity="center"
            android:textSize="20sp"
            android:padding="10dp"
            android:textColor="@color/Me_textColor"/>
        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_bg"
            android:gravity="center"
            android:id="@+id/weight"
            android:digits="1234567890"
            android:inputType="number|phone"
            android:singleLine="true"
            android:maxLength="6"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:layout_weight="1"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/kg"
            android:textColor="@color/Me_textColor"
            android:textSize="20sp"
            android:gravity="center"
            android:background="#00000000"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="10dp">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="10dp"
            android:layout_weight="1">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/waist"
                android:singleLine="false"
                android:gravity="center"
                android:textSize="20sp"
                android:textColor="@color/Me_textColor"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tips1"
                android:gravity="center"
                android:textSize="12sp"
                android:layout_marginTop="5dp"
                android:textColor="@color/Me_textColor"/>

        </LinearLayout>
        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_bg"
            android:gravity="center"
            android:layout_gravity="center"
            android:digits="1234567890"
            android:inputType="number|phone"
            android:singleLine="true"
            android:maxLength="6"
            android:id="@+id/waist"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:layout_weight="1"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:text="@string/cm"
            android:textSize="20sp"
            android:gravity="center"
            android:textColor="@color/Me_textColor"
            android:background="#00000000"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="10dp">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="10dp"
            android:layout_weight="1">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/neck"
                android:singleLine="false"
                android:gravity="center"
                android:textSize="20sp"
                android:textColor="@color/Me_textColor"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tips2"
                android:gravity="center"
                android:textSize="12sp"
                android:layout_marginTop="5dp"
                android:textColor="@color/Me_textColor"/>

        </LinearLayout>
        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_bg"
            android:gravity="center"
            android:layout_gravity="center"
            android:id="@+id/neck"
            android:digits="1234567890"
            android:inputType="number|phone"
            android:singleLine="true"
            android:maxLength="6"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:layout_weight="1"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"

            android:text="@string/cm"
            android:textSize="20sp"
            android:gravity="center"
            android:textColor="@color/Me_textColor"
            android:background="#00000000"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="10dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sport"
            android:gravity="center"
            android:textSize="20sp"
            android:padding="10dp"
            android:textColor="@color/Me_textColor"/>
        <RadioGroup
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="2"
            android:orientation="horizontal">
            <RadioButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/high"
                android:textColor="@color/Me_textColor"
                android:text="@string/high"/>
            <RadioButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/middle"
                android:textColor="@color/Me_textColor"
                android:text="@string/middle"/>
            <RadioButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/low"
                android:textColor="@color/Me_textColor"
                android:text="@string/low"/>
        </RadioGroup>
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/sport_low"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/sport_middle"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/sport_high"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="10dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sex"
            android:gravity="center"
            android:textSize="20sp"
            android:padding="10dp"
            android:textColor="@color/Me_textColor"/>
       <RadioGroup
           android:layout_width="0dp"
           android:layout_height="wrap_content"
           android:layout_gravity="center"
           android:layout_weight="2"
           android:orientation="horizontal">
           <RadioButton
               android:layout_width="0dp"
               android:layout_height="wrap_content"
               android:layout_weight="1"
               android:id="@+id/man"
               android:textColor="@color/Me_textColor"
               android:text="男"/>
           <RadioButton
               android:layout_width="0dp"
               android:layout_height="wrap_content"
               android:layout_weight="1"
               android:id="@+id/woman"
               android:textColor="@color/Me_textColor"
               android:text="女"/>
       </RadioGroup>
    </LinearLayout>

    <Button
        android:id="@+id/ok"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/addnote_submit_style"
        android:gravity="center"
        android:text="@string/sure"
        android:textColor="@color/Me_textColor"
        android:textSize="14sp" />


</LinearLayout>