<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#333D56"
    android:orientation="vertical"
    tools:context=".Me_Activty.BFRActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#2D374C"
        android:orientation="horizontal">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/Me_textColor"
        android:padding="15dp"
        android:text="@string/bfr"
        android:layout_gravity="center_horizontal"
        android:textSize="25sp"
        android:gravity="center" />
    </RelativeLayout>
    <include
        layout="@layout/age_and_waist_layout"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="10dp"
            android:layout_weight="1">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="颈围"
                android:singleLine="false"
                android:gravity="center"
                android:textSize="20sp"
                android:textColor="@color/Me_textColor"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="(最窄处)"
                android:gravity="center"
                android:textSize="15sp"
                android:layout_marginTop="5dp"
                android:textColor="@color/Me_textColor"/>

        </LinearLayout>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_bg"
            android:gravity="center"
            android:layout_gravity="center"
            android:id="@+id/neck"
            android:textColor="@android:color/white"
            android:textSize="25sp"
            android:layout_weight="1"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="CM"
            android:layout_gravity="center"
            android:textColor="@color/Me_textColor"
            android:textSize="20sp"
            android:gravity="center"
            android:background="#00000000"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10dp">
        <Button
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="#f17c67"
            android:text="点击获取结果"
            android:id="@+id/bfr_res"
            android:gravity="center"
            android:textSize="25sp"
            android:textColor="@android:color/white"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="8dp"
            android:layout_marginTop="2dp"
            android:background="#D4D29F"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#C0C0C0"
            android:layout_marginTop="2dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_weight="1"
            android:text="低"
            android:textColor="@color/Me_textColor"
            android:textSize="15sp"
            android:gravity="center"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_weight="1"
            android:text="@string/less_11"
            android:textColor="@color/Me_textColor"
            android:textSize="15sp"
            android:gravity="center"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_weight="1"
            android:text="正常"
            android:textColor="@color/Me_textColor"
            android:textSize="15sp"
            android:gravity="center"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_weight="1"
            android:text="11 - 22%"
            android:textColor="@color/Me_textColor"
            android:textSize="15sp"
            android:gravity="center"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_weight="1"
            android:text="高"
            android:textColor="@color/Me_textColor"
            android:textSize="15sp"
            android:gravity="center"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_weight="1"
            android:text="22 - 28%"
            android:textColor="@color/Me_textColor"
            android:textSize="15sp"
            android:gravity="center"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_weight="1"
            android:text="非常高"
            android:textColor="@color/Me_textColor"
            android:textSize="15sp"
            android:gravity="center"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_weight="1"
            android:text="@string/more_28"
            android:textColor="@color/Me_textColor"
            android:textSize="15sp"
            android:gravity="center"/>
    </LinearLayout>

</LinearLayout>